--- a/charts/zeebe-benchmark/templates/worker.yaml
+++ b/charts/zeebe-benchmark/templates/worker.yaml
@@ -26,6 +26,7 @@ spec:
                 -Dapp.brokerUrl={{ .Release.Name }}-zeebe-gateway:26500
                 -Dzeebe.client.requestTimeout=62000
                 -Dapp.worker.capacity={{ .Values.worker.capacity }}
+                -Dapp.worker.payloadPath=bpmn/emptyPayload.json
                 -Dapp.worker.pollingDelay=1ms
                 -Dapp.worker.completionDelay=50ms
                 -XX:+HeapDumpOnOutOfMemoryError
