--- a/kind/single-es-instance-ztoo-g3-s-values.yaml
+++ b/kind/single-es-instance-ztoo-g3-s-values.yaml
@@ -1,23 +1,23 @@
 # create namespace
-# => kubectl create namespace dm-benchmark-single-es-ztoo
+# => kubectl create namespace dm-benchmark-single-es-ztoo-g3-s
 # switch namespace
-# => kubectl config set-context --current --namespace=dm-benchmark-single-es-ztoo
+# => kubectl config set-context --current --namespace=dm-benchmark-single-es-ztoo-g3-s
 #
 # update dependencies
 # => helm dependency update charts/zeebe-benchmark
 #
 # to make template invoke the following:
-# => helm template dm-bmrk-s-ztoo charts/zeebe-benchmark -f kind/single-es-instance-ztoo-enabled-values.yaml --output-dir out/single/single-es-ztoo-enabled-values
+# => helm template dm-bmrk-s-ztoo-g3-s charts/zeebe-benchmark -f kind/single-es-instance-ztoo-g3-s-values.yaml --output-dir out/single/single-es-ztoo-values-g3-s
 #
 # to install charts invoke the following:
-# => helm dependency update charts/zeebe-benchmark && helm install dm-bmrk-s-ztoo charts/zeebe-benchmark -f kind/single-es-instance-ztoo-enabled-values.yaml --render-subchart-notes
+# => helm dependency update charts/zeebe-benchmark && helm install dm-bmrk-s-ztoo-g3-s charts/zeebe-benchmark -f kind/single-es-instance-ztoo-g3-s-values.yaml --render-subchart-notes
 #
 #
 # to uninstall charts invoke the following:
-# => helm uninstall dm-bmrk-s-ztoo && kubectl delete pvc -l app.kubernetes.io/instance=dm-bmrk-s-ztoo && kubectl delete pvc -l release=dm-bmrk-s-ztoo
+# => helm uninstall dm-bmrk-s-ztoo-g3-s && kubectl delete pvc -l app.kubernetes.io/instance=dm-bmrk-s-ztoo-g3-s && kubectl delete pvc -l release=dm-bmrk-s-ztoo-g3-s
 #
 # delete namespace
-# => kubectl delete namespace dm-benchmark-single-es-ztoo
+# => kubectl delete namespace dm-benchmark-single-es-ztoo-g3-s
 #
 
 global:
@@ -42,19 +42,10 @@ camunda-platform:
         clusterName: "elastic-cluster"
 
   zeebe:
-    # ZEEBE_BROKER_THREADS_CPUTHREADCOUNT
-    #cpuThreadCount: "5"
-    # ZEEBE_BROKER_THREADS_IOTHREADCOUNT
-    #ioThreadCount: "5"
-    #env:
-    #  - name: ZEEBE_BROKER_DATA_DISKUSAGEREPLICATIONWATERMARK
-    #    value: "0.87"
-    #  - name: ZEEBE_BROKER_DATA_DISKUSAGECOMMANDWATERMARK
-    #    value: "0.85"
     retention:
       enabled: true
       ## @param zeebe.retention.minimumAge defines how old the data must be, before the data is deleted as a duration.
-      minimumAge: 1h
+      minimumAge: 2d
     resources:
       limits:
         # default 4Gi
@@ -65,12 +56,9 @@ camunda-platform:
         # default 4Gi
         memory: "4Gi"
         # default 1350m
-        cpu: "1500m"
+        cpu: "1350m"
 
   zeebe-gateway:
-    #env:
-    #  - name: ZEEBE_GATEWAY_THREADS_MANAGEMENTTHREADS
-    #    value: "2"
     resources:
       limits:
         # default 400Mi
@@ -85,43 +73,22 @@ camunda-platform:
 
   operate:
     enabled: true
-    resources:
-      requests:
-        memory: "250Mi"
-        cpu: "400m"
-      limits:
-        memory: "2Gi"
-        cpu: "1000m"
     retention:
       enabled: true
-      minimumAge: 1h
+      minimumAge: 1d
 
   tasklist:
     enabled: true
-    resources:
-      limits:
-        memory: "1Gi"
-        cpu: "1"
-      requests:
-        memory: "400Mi"
-        cpu: "400m"
     retention:
       enabled: true
-      minimumAge: 1h
+      minimumAge: 1d
 
   optimize:
     enabled: true
-    resources:
-      limits:
-        memory: "4Gi"
-        cpu: "1500m"
-      requests:
-        memory: "1500Mi"
-        cpu: "500m"
     retention:
       enabled: true
-      # triggered every 15 minutes => https://crontab.guru/#*/15_*_*_*_*
-      cronTrigger: "*/15 * * * *"
+      # triggered every hour => https://crontab.guru/#0_*_*_*_*
+      cronTrigger: "0 * * * *"
       # https://docs.oracle.com/javase/9/docs/api/java/time/Period.html#parse-java.lang.CharSequence-
       ttl: "P1D"
       processDataCleanup:
@@ -134,6 +101,8 @@ camunda-platform:
         enabled: true
     archiver:
       enabled: true
+    elasticSearch:
+      indexNumberOfReplicas: 0
 
   identity:
     enabled: false
@@ -141,14 +110,15 @@ camunda-platform:
   elasticsearch:
     enabled: true
     master:
+      replicaCount: 1
       persistence:
-        size: 256Gi
+        size: 192Gi
       resources:
         limits:
-          memory: "10Gi"
-          cpu: "4000m"
-        requests:
           memory: "6Gi"
+          cpu: "3000m"
+        requests:
+          memory: "3Gi"
           cpu: "2000m"
 
   elasticsearch-zeebe:
@@ -165,27 +135,9 @@ camunda-platform:
 
 retentionPolicy:
   enabled: false
-  # Every 15 minutes => https://crontab.guru/#*/15_*_*_*_*
-  schedule: "*/15 * * * *"
-  policies:
-    - name: zeebe-
-      unit: days
-      maxSize:
-      timeToLive: 1
-    - name: operate-
-      unit: days
-      timeToLive: 1
-    - name: tasklist-
-      unit: days
-      timeToLive: 1
-    # the following are not consumed by operate so we want to get rid of them rather quickly
-    - name: zeebe-record_message
-      maxSize: 1
-    - name: zeebe-record_process-instance-creation
-      maxSize: 1
 
 starter:
-  rate: 30
+  rate: 50
 
 worker:
   replicas: 1
