--- a/kind/multiple-es-instances-ztoo-g3-s-90-values.yaml
+++ b/kind/multiple-es-instances-ztoo-g3-s-90-values.yaml
@@ -1,20 +1,20 @@
 # create namespace
-# => kubectl create namespace dm-benchmark-multiple-es-ztoo
+# => kubectl create namespace dm-benchmark-multiple-es-ztoo-g3-s-90
 # switch namespace
-# => kubectl config set-context --current --namespace=dm-benchmark-multiple-es-ztoo
+# => kubectl config set-context --current --namespace=dm-benchmark-multiple-es-ztoo-g3-s-90
 #
 #
 # to make template invoke the following:
-# => helm dependency update charts/zeebe-benchmark && helm template dm-bmrk-m-ztoo charts/zeebe-benchmark -f kind/multiple-es-instances-ztoo-enabled-values.yaml --output-dir out/multiple/multiple-es-ztoo-enabled-values
+# => helm dependency update charts/zeebe-benchmark && helm template dm-bmrk-m-ztoo-g3-s-90 charts/zeebe-benchmark -f kind/multiple-es-instances-ztoo-g3-s-90-values.yaml --output-dir out/multiple/multiple-es-ztoo-values-g3-s-90
 #
 # to install charts invoke the following:
-# => helm dependency update charts/zeebe-benchmark && helm install dm-bmrk-m-ztoo charts/zeebe-benchmark -f kind/multiple-es-instances-ztoo-enabled-values.yaml --render-subchart-notes
+# => helm dependency update charts/zeebe-benchmark && helm install dm-bmrk-m-ztoo-g3-s-90 charts/zeebe-benchmark -f kind/multiple-es-instances-ztoo-g3-s-90-values.yaml --render-subchart-notes
 #
 # to uninstall charts invoke the following:
-# => helm uninstall dm-bmrk-m-ztoo && kubectl delete pvc -l app.kubernetes.io/instance=dm-bmrk-m-ztoo && kubectl delete pvc -l release=dm-bmrk-m-ztoo
+# => helm uninstall dm-bmrk-m-ztoo-g3-s-90 && kubectl delete pvc -l app.kubernetes.io/instance=dm-bmrk-m-ztoo-g3-s-90 && kubectl delete pvc -l release=dm-bmrk-m-ztoo-g3-s-90
 #
 # delete namespace
-# => kubectl delete namespace dm-benchmark-multiple-es-ztoo
+# => kubectl delete namespace dm-benchmark-multiple-es-ztoo-g3-s-90
 #
 
 global:
@@ -38,81 +38,53 @@ camunda-platform:
         host: "{{ .Release.Name }}-elasticsearch-optimize"
         clusterName: "optimize-cluster"
   zeebe:
-    # ZEEBE_BROKER_THREADS_CPUTHREADCOUNT
-    #cpuThreadCount: "3"
-    # ZEEBE_BROKER_THREADS_IOTHREADCOUNT
-    #ioThreadCount: "3"
-    #env:
-      #- name: ZEEBE_BROKER_DATA_DISKUSAGEREPLICATIONWATERMARK
-        #value: "0.87"
-      #- name: ZEEBE_BROKER_DATA_DISKUSAGECOMMANDWATERMARK
-        #value: "0.85"
-    #resources:
-      #limits:
-        #memory: "4Gi"
-        #cpu: "2000m"
-      #requests:
-        #memory: "4Gi"
-        #cpu: "1350m"
     retention:
       enabled: true
       ## @param zeebe.retention.minimumAge defines how old the data must be, before the data is deleted as a duration.
-      minimumAge: 1h
+      minimumAge: 2d
+    resources:
+      limits:
+        # default 4Gi
+        memory: "4Gi"
+        # default 1350m
+        cpu: "2000m"
+      requests:
+        # default 4Gi
+        memory: "4Gi"
+        # default 1350m
+        cpu: "1350m"
 
-  #zeebe-gateway:
-    #env:
-      #- name: ZEEBE_GATEWAY_THREADS_MANAGEMENTTHREADS
-        #value: "2"
-    #resources:
-      #limits:
-        #memory: "2Gi"
-        #cpu: "2"
-      #requests:
-        #memory: "1Gi"
-        #cpu: "1"
+  zeebe-gateway:
+    resources:
+      limits:
+        # default 400Mi
+        memory: "2Gi"
+        # default 450m
+        cpu: "2000m"
+      requests:
+        # default 400Mi
+        memory: "1Gi"
+        # default 450m
+        cpu: "1000m"
 
   operate:
     enabled: true
-    resources:
-      limits:
-        memory: "2Gi"
-        cpu: "1000m"
-      requests:
-        memory: "250Mi"
-        cpu: "400m"
     retention:
       enabled: true
-      minimumAge: 1h
+      minimumAge: 1d
 
   tasklist:
     enabled: true
-    resources:
-      limits:
-        memory: "1Gi"
-        cpu: "1"
-      requests:
-        memory: "400Mi"
-        cpu: "400m"
     retention:
       enabled: true
-      minimumAge: 1h
-
-  identity:
-    enabled: false
+      minimumAge: 1d
 
   optimize:
     enabled: true
-    resources:
-      limits:
-        memory: "4Gi"
-        cpu: "1500m"
-      requests:
-        memory: "1500Mi"
-        cpu: "600m"
     retention:
-      enabled: trues
-      # triggered every 15 minutes => https://crontab.guru/#*/15_*_*_*_*
-      cronTrigger: "*/15 * * * *"
+      enabled: true
+      # triggered every hour => https://crontab.guru/#0_*_*_*_*
+      cronTrigger: "0 * * * *"
       # https://docs.oracle.com/javase/9/docs/api/java/time/Period.html#parse-java.lang.CharSequence-
       ttl: "P1D"
       processDataCleanup:
@@ -134,34 +106,38 @@ camunda-platform:
   elasticsearch-zeebe:
     enabled: true
     master:
-      replicaCount: 2
+      replicaCount: 1
+      heapSize: 512m
       resources:
         limits:
-          memory: "3Gi"
+          memory: "1Gi"
           cpu: "1"
         requests:
-          memory: "2Gi"
+          memory: "1Gi"
           cpu: "500m"
 
   elasticsearch-tasklist:
     enabled: true
     master:
       replicaCount: 1
+      heapSize: 512m
       resources:
         limits:
-          memory: "3Gi"
+          memory: "1Gi"
           cpu: "1"
         requests:
-          memory: "2Gi"
+          memory: "1Gi"
           cpu: "500m"
 
   elasticsearch-operate:
     enabled: true
     master:
       replicaCount: 1
+      persistence:
+        size: 128Gi
       resources:
         limits:
-          memory: "3Gi"
+          memory: "2Gi"
           cpu: "1"
         requests:
           memory: "2Gi"
@@ -175,14 +151,14 @@ camunda-platform:
         size: 128Gi
       resources:
         limits:
-          memory: "3Gi"
+          memory: "2Gi"
           cpu: "1"
         requests:
           memory: "2Gi"
           cpu: "500m"
 
 starter:
-  rate: 15
+  rate: 90
 
 worker:
   replicas: 1
@@ -197,29 +173,6 @@ publisher:
 
 retentionPolicy:
   enabled: false
-  # Every 5 minutes => https://crontab.guru/#*/5_*_*_*_*
-  schedule: "*/5 * * * *"
-  policies:
-    - name: zeebe-
-      maxSize:
-      unit: minutes
-      timeToLive: 5
-    - name: operate-
-      unit: minutes
-      timeToLive: 5
-    - name: tasklist-
-      unit: minutes
-      timeToLive: 5
-    # the following are not consumed by operate so we want to get rid of them rather quickly
-    - name: zeebe-record_message
-      maxSize: 1
-    - name: zeebe-record_process-instance-creation
-      maxSize: 1
-  client:
-    hosts:
-      - "http://RELEASE_NAME-elasticsearch-zeebe-master-hl:9200"
-      - "http://RELEASE_NAME-elasticsearch-tasklist-master-hl:9200"
-      - "http://RELEASE_NAME-elasticsearch-operate-master-hl:9200"
 
 prometheus-elasticsearch-exporter:
   enabled: false
