--- a/charts/zeebe-benchmark/test/golden/operate-deployment.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/operate-deployment.golden.yaml
@@ -1,16 +1,16 @@
 ---
-# Source: zeebe-benchmark/charts/camunda-platform/charts/operate/templates/deployment.yaml
+# Source: zeebe-benchmark/charts/camunda-platform/templates/operate/deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: benchmark-test-operate
   labels:
     app: camunda-platform
-    app.kubernetes.io/name: operate
+    app.kubernetes.io/name: camunda-platform
     app.kubernetes.io/instance: benchmark-test
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: camunda-platform
-    app.kubernetes.io/version: "8.2.8"
+    app.kubernetes.io/version: "SNAPSHOT"
     app.kubernetes.io/component: operate
   annotations:
     {}
@@ -19,7 +19,7 @@ spec:
   selector:
     matchLabels:
       app: camunda-platform
-      app.kubernetes.io/name: operate
+      app.kubernetes.io/name: camunda-platform
       app.kubernetes.io/instance: benchmark-test
       app.kubernetes.io/managed-by: Helm
       app.kubernetes.io/part-of: camunda-platform
@@ -28,57 +28,79 @@ spec:
     metadata:
       labels:
         app: camunda-platform
-        app.kubernetes.io/name: operate
+        app.kubernetes.io/name: camunda-platform
         app.kubernetes.io/instance: benchmark-test
         app.kubernetes.io/managed-by: Helm
         app.kubernetes.io/part-of: camunda-platform
-        app.kubernetes.io/version: "8.2.8"
+        app.kubernetes.io/version: "SNAPSHOT"
         app.kubernetes.io/component: operate
+      annotations:
+        checksum/config: e623a302cbdef6259b9b67f40f3810c3b80d379178eda0e7f1debfeaf264c692
     spec:
       imagePullSecrets:
         []
+      initContainers:
+        []
       containers:
-      - name: operate
-        image: "camunda/operate:8.2.8"
-        imagePullPolicy: Always
-        env:
-          - name: SPRING_PROFILES_ACTIVE
-            value: "auth"
-          - name: OPERATE_LOG_APPENDER
-            value: Stackdriver
-          - name: OPERATE_LOG_STACKDRIVER_SERVICENAME
-            value: operate
-          - name: OPERATE_LOG_STACKDRIVER_SERVICEVERSION
-            valueFrom:
-              fieldRef:
-                fieldPath: metadata.namespace
-        resources:
-          limits:
-            cpu: 2000m
-            memory: 2Gi
-          requests:
-            cpu: 600m
-            memory: 400Mi
-        ports:
-        - containerPort: 8080
-          name: http
-          protocol: TCP
-        readinessProbe:
-          httpGet:
-            path: /actuator/health/readiness
-            scheme: HTTP
-            port: http
-          initialDelaySeconds: 30
-          periodSeconds: 30
-          successThreshold: 1
-          failureThreshold: 5
-          timeoutSeconds: 1
-        volumeMounts:
-        - name: config
-          mountPath: /usr/local/operate/config/application.yml
-          subPath: application.yml
+        - name: operate
+          image: camunda/operate:8.2.8
+          imagePullPolicy: Always
+          securityContext:
+            allowPrivilegeEscalation: false
+            privileged: false
+            readOnlyRootFilesystem: true
+            runAsUser: 1004
+          env:
+            - name: SPRING_PROFILES_ACTIVE
+              value: "auth"
+            - name: ZEEBE_CLIENT_CONFIG_PATH
+              value: /tmp/zeebe_auth_cache
+            - name: OPERATE_LOG_APPENDER
+              value: Stackdriver
+            - name: OPERATE_LOG_STACKDRIVER_SERVICENAME
+              value: operate
+            - name: OPERATE_LOG_STACKDRIVER_SERVICEVERSION
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+          resources:
+            limits:
+              cpu: 2000m
+              memory: 2Gi
+            requests:
+              cpu: 600m
+              memory: 400Mi
+          ports:
+            - containerPort: 8080
+              name: http
+              protocol: TCP
+          readinessProbe:
+            httpGet:
+              path: /actuator/health/readiness
+              scheme: HTTP
+              port: http
+            initialDelaySeconds: 30
+            periodSeconds: 30
+            successThreshold: 1
+            failureThreshold: 5
+            timeoutSeconds: 1
+          volumeMounts:
+            - name: config
+              mountPath: /usr/local/operate/config/application.yml
+              subPath: application.yml
+            - name: tmp
+              mountPath: /tmp
+            - name: camunda
+              mountPath: /camunda
       volumes:
-      - name: config
-        configMap:
-          name: benchmark-test-operate
-          defaultMode: 484
+        - name: config
+          configMap:
+            name: benchmark-test-operate
+            defaultMode: 484
+        - name: tmp
+          emptyDir: {}
+        - name: camunda
+          emptyDir: {}
+      securityContext:
+        fsGroup: 1000
+        runAsNonRoot: true
