fix: use correct values for ES chart
Our camunda-platform chart migrated to bitnami ES chart, which caused to have different
values or at least in different format. This commit applies values to new expected format,
to correctly configure ES nodes.

https://artifacthub.io/packages/helm/bitnami/elasticsearch

--- a/charts/zeebe-benchmark/values.yaml
+++ b/charts/zeebe-benchmark/values.yaml
@@ -456,25 +456,29 @@ camunda-platform:
     enabled: true
     imageTag: 8.9.2
 
-    replicas: 3
-    minimumMasterNodes: 2
-
-    volumeClaimTemplate:
-      accessModes: [ "ReadWriteOnce" ]
-      storageClassName: "ssd"
+    master:
+      # Number of master-elegible replicas to deploy
+      replicaCount: 3
+      pdb:
+        minAvailable: 2
+      # Elasticsearch master-eligible node heap size.
+      # Will be converted to -Xms3g
+      heapSize: 3g
+      # The resources configurations for elasticsearch containers
       resources:
         requests:
-          storage: 16Gi
-
-    esJavaOpts: "-Xmx3g -Xms3g"
-
-    resources:
-      requests:
-        cpu: 1
-        memory: 3Gi
-      limits:
-        cpu: 2
-        memory: 6Gi
+          cpu: 1
+          memory: 3Gi
+        limits:
+          cpu: 2
+          memory: 6Gi
+      persistence:
+        # Persistent Volume Storage Class
+        storageClass: "ssd"
+        # Persistent Volume Size
+        size: 16Gi
+        # Persistent Volume Access Modes
+        accessModes: [ "ReadWriteOnce" ]
 
   # Change these settings to configure a different way to collect metrics
   prometheusServiceMonitor:
