test: update golden files

--- a/charts/zeebe-benchmark/test/golden/operate-configmap.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/operate-configmap.golden.yaml
@@ -38,6 +38,9 @@ data:
         port: 9200
         # Index prefix, configured in Zeebe Elasticsearch exporter
         prefix: zeebe-record
+      archiver:
+        ilmEnabled: true
+        ilmMinAgeForDeleteArchivedIndices: 1d
     logging:
       level:
         ROOT: INFO
