fix: reduce elastic sts name
Previously installation failed due to too long name,
to specific the labels added by the statefullset controller
failed the installation.

See related K8 issue https://github.com/kubernetes/kubernetes/issues/64023

--- a/charts/zeebe-benchmark/values.yaml
+++ b/charts/zeebe-benchmark/values.yaml
@@ -396,6 +396,8 @@ camunda-platform:
     imageTag: 8.9.2
 
     master:
+      fullnameOverride: elastic
+      nameOverride: elastic
       # Number of master-elegible replicas to deploy
       replicaCount: 3
       pdb:
