refactor: disable identityKeycloak
We have to separately disable keycloak now (new), seems to be a consequence
of the refactoring of not having subcharts.
https://docs.camunda.io/docs/self-managed/setup/upgrade/#deprecation-notes

--- a/charts/zeebe-benchmark/values.yaml
+++ b/charts/zeebe-benchmark/values.yaml
@@ -378,6 +378,9 @@ camunda-platform:
   identity:
     enabled: false
 
+  identityKeycloak:
+    enabled: false
+
   optimize:
     enabled: false
 
