refactor: change zeebe-gateway to zeebeGateway
Based on changes from the parent helm chart
https://docs.camunda.io/docs/self-managed/setup/upgrade/#helm-chart-1002

--- a/charts/zeebe-benchmark/values.yaml
+++ b/charts/zeebe-benchmark/values.yaml
@@ -249,7 +249,7 @@ camunda-platform:
     # PvcStorageClassName can be used to set the storage class name which should be used by the persistent volume claim. It is recommended to use a storage class, which is backed with a SSD.
     pvcStorageClassName: ssd
 
-  zeebe-gateway:
+  zeebeGateway:
     # Replicas defines how many standalone gateways are deployed
     replicas: 2
 
