--- a/charts/zeebe-benchmark/test/golden/c8-service.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/c8-service.golden.yaml
@@ -1,29 +1,34 @@
 ---
-# Source: zeebe-benchmark/charts/camunda-platform/templates/operate/service.yaml
+# Source: zeebe-benchmark/charts/camunda-platform/templates/zeebe-gateway/service.yaml
 apiVersion: v1
 kind: Service
 metadata:
-  name: benchmark-test-operate
+  name: benchmark-test-zeebe-gateway
   labels:
     app: camunda-platform
     app.kubernetes.io/name: camunda-platform
     app.kubernetes.io/instance: benchmark-test
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: camunda-platform
-    app.kubernetes.io/component: operate
-    app.kubernetes.io/version: "8.5.4"
+    app.kubernetes.io/component: zeebe-gateway
+    app.kubernetes.io/version: "SNAPSHOT"
   annotations:
 spec:
   type: ClusterIP
-  ports:
-    - port: 80
-      name: http
-      targetPort: 8080
-      protocol: TCP
   selector:
     app: camunda-platform
     app.kubernetes.io/name: camunda-platform
     app.kubernetes.io/instance: benchmark-test
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: camunda-platform
-    app.kubernetes.io/component: operate
+    app.kubernetes.io/component: zeebe-gateway
+  ports:
+    - port: 9600
+      protocol: TCP
+      name: http
+    - port: 26500
+      protocol: TCP
+      name: gateway
+    - port: 8080
+      protocol: TCP
+      name: rest
