--- a/charts/zeebe-benchmark/templates/zeebe-config.yaml
+++ b/charts/zeebe-benchmark/templates/zeebe-config.yaml
@@ -1,10 +1,10 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: zeebe-config
+  name: benchmark-config
   labels: {{- include "zeebe-benchmark.labels" . | nindent 4 }}
 data: 
-  application.yml: | {{ .Values.zeebe.config | toYaml | nindent 4 }}
+  benchmark-config.yaml: | {{ .Values.zeebe.config | toYaml | nindent 4 }}
   {{- if .Values.zeebe.profiling.enabled }}
   java-opts: -javaagent:/pyroscope/pyroscope.jar
   {{- end }}
