test: regenerate golden files

--- a/charts/zeebe-benchmark/test/golden/c8-deployment.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/c8-deployment.golden.yaml
@@ -117,6 +117,8 @@ spec:
               value: "0"
             - name: PYROSCOPE_LABELS
               value: namespace=$(K8S_NAMESPACE), pod=$(K8S_NAME)
+            - name: SPRING_CONFIG_ADDITIONALLOCATION
+              value: /usr/local/zeebe/config/benchmark-config.yaml
             - name: JAVA_OPTS
               valueFrom:
                 configMapKeyRef:
@@ -133,9 +135,9 @@ spec:
             
             - mountPath: /pyroscope
               name: pyroscope
-            - mountPath: /usr/local/zeebe/config/application.yaml
-              name: zeebe-config
-              subPath: application.yml
+            - mountPath: /usr/local/zeebe/config/benchmark-config.yaml
+              name: benchmark-config
+              subPath: benchmark-config.yaml
           securityContext:
             allowPrivilegeEscalation: false
             privileged: false
@@ -170,8 +172,8 @@ spec:
             defaultMode: 484
         - configMap:
             defaultMode: 492
-            name: zeebe-config
-          name: zeebe-config
+            name: benchmark-config
+          name: benchmark-config
         - emptyDir: {}
           name: pyroscope
       serviceAccountName: benchmark-test-zeebe-gateway
