--- a/charts/zeebe-benchmark/test/golden/c8-zeebe-configmap.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/c8-zeebe-configmap.golden.yaml
@@ -51,6 +51,15 @@ data:
         threads:
           cpuThreadCount: "3"
           ioThreadCount: "3"
+
+    # Camunda Database configuration
+    camunda.database:
+      type: elasticsearch
+      # Cluster name
+      clusterName: elasticsearch
+      # Elasticsearch full url
+      url: "http://benchmark-test-elasticsearch:9200"
+
   startup.sh: |
     #!/usr/bin/env bash
     set -eux -o pipefail
