--- a/charts/zeebe-benchmark/test/golden/c8-zeebe-gateway-configmap.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/c8-zeebe-gateway-configmap.golden.yaml
@@ -16,6 +16,14 @@ data:
   gateway-log4j2.xml: |
   application.yaml: |
 
+    # Camunda Database configuration
+    camunda.database:
+      type: elasticsearch
+      # Cluster name
+      clusterName: elasticsearch
+      # Elasticsearch full url
+      url: "http://benchmark-test-elasticsearch:9200"
+
     server:
       address: "0.0.0.0"
       port: "8080"
@@ -27,3 +35,6 @@ data:
         cluster:
           clusterName: benchmark-test-zeebe
           port: "26502"
+        network:
+          host: 0.0.0.0
+          port: "26500"
