--- a/charts/zeebe-benchmark/test/golden/operate-configmap.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/operate-configmap.golden.yaml
@@ -11,13 +11,21 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: camunda-platform
     app.kubernetes.io/component: operate
-    app.kubernetes.io/version: "8.5.4"
+    app.kubernetes.io/version: "SNAPSHOT"
 data:
-  application.yml: |
+  application.yaml: |
     spring:
       profiles:
         active: "auth"
-    
+
+    # Camunda Database configuration
+    camunda.database:
+      type: elasticsearch
+      # Cluster name
+      clusterName: elasticsearch
+      # Elasticsearch full url
+      url: "http://benchmark-test-elasticsearch:9200"
+
     # Operate configuration file
     camunda.operate:
     
@@ -45,8 +53,8 @@ data:
         url: "http://benchmark-test-elasticsearch:9200"
       # Zeebe instance
       zeebe:
-        # Broker contact point
-        brokerContactPoint: "benchmark-test-zeebe-gateway:26500"
+        # Gateway address
+        gatewayAddress: "benchmark-test-zeebe-gateway:26500"
       archiver:
         ilmEnabled: true
         ilmMinAgeForDeleteArchivedIndices: 30m
